--- a/Biomes/Packages/manifest.json
+++ b/Biomes/Packages/manifest.json
@@ -1,18 +1,11 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.analytics": "3.3.2",
-    "com.unity.burst": "1.1.2",
-    "com.unity.collab-proxy": "1.2.16",
-    "com.unity.ext.nunit": "1.0.0",
-    "com.unity.ide.vscode": "1.1.2",
-    "com.unity.package-manager-ui": "2.2.0",
-    "com.unity.render-pipelines.lightweight": "6.9.1",
-    "com.unity.test-framework": "1.0.18",
-    "com.unity.textmeshpro": "2.0.1",
-    "com.unity.timeline": "1.1.0",
+    "com.unity.ide.visualstudio": "2.0.5",
+    "com.unity.ide.vscode": "1.2.3",
+    "com.unity.render-pipelines.lightweight": "8.2.0",
+    "com.unity.timeline": "1.3.6",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.legacyinputhelpers": "2.0.6",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
